--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "passport-product-hunt",
-  "version": "0.0.2",
+  "name": "passport-producthunt",
+  "version": "0.0.3",
   "description": "Product hunt authentication strategy for Passport.",
   "keywords": [
     "passport",
